# pylgs

./: .gitignore  MANIFEST.in  README.md  index.html  listings.json  makefile  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
API/: dmelements.html  index.html  lgssystem.html  velocitygroups.html
API/pyMOR/: grids.html  index.html  models.html  operators.html  parameters.html  timestepping.html  vectorarrays.html
API/utilities/: basic.html  formatting.html  index.html  nbdev.html  numpy.html  sparse.html  testing.html  xarray.html
Tutorials/: index.html  sodium_lgs.html  technical_background.html
api/: dmelements.html  index.html  velocitygroups.html
api-tmp/pyMOR/: operators.html
api-tmp/pymor-tmp/: vectorarrays.html
api-tmp/utilities/: index.html  testing.html
api/pymor/: grids.html  index.html  models.html  operators.html  parameters.html  timestepping.html  vectorarrays.html
api/utilities/: basic.html  formatting.html  index.html  nbdev.html  numpy.html  sparse.html  testing.html  xarray.html
nbs/: index.ipynb  nbdev.yml  sidebar.yml  styles.css
nbs/API/: index.qmd  lgssystem.ipynb
nbs/api/: core_test.npz  dmelements.ipynb  lgssystem.ipynb  velocitygroups.ipynb
nbs/tutorials/: chirped_lgs.ipynb  index.qmd  (+3 more)
nbs/tutorials-tmp/: technical_background.ipynb  tutorials_test.npz
pylgs/: _modidx.py  all.py  dmelements.py  imports.py  lgssystem.py  patches.py  velocitygroups.py
tutorials/: chirped_lgs.html  index.html  sodium_lgs.html  technical_background.html
(+69 files in other folders)
